[tool.poetry]
name = "jira-dependency-graph"
version = "0.1.0"
description = "A graph to visualise task dependencies and gain insight into workflows"
authors = ["Pietro Servini <pietro.servini@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/servinip/jira-dependency-graph"
packages = [{include = "jira_dependency_graph"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
